Fix some pages on mobile

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ main {
     flex-direction: column;
     flex-grow: 1;
     padding: 2rem;
-    gap: 2rem;
+    gap: 1.25rem;
 }
 
 :root {
